# sumur-dalam

./: .gitignore  LICENSE  README.md  stack.yaml  sumur-dalam.cabal
app/: Main.hs
benih/: Main.hs
src/: Conf.hs  Model.hs  SumurApi.hs  Types.hs  Util.hs
src/Api/: Administrasi.hs  AdministrasiSistem.hs  Otorisasi.hs  Pembayaran.hs  Petugas.hs
src/Bisnis/: LainLain.hs  Otoritas.hs  PembukuanAir.hs  PembukuanPelanggan.hs  PembukuanTagihan.hs  ValidasiData.hs
src/Model/: Grouping.hs
src/Penangan/: Air.hs  Kasir.hs  Pintu.hs  Sistem.hs
src/Pertanyaan/: Bantuan.hs  TentangMinum.hs  TentangPengguna.hs  TentangSistem.hs  TentangTagihan.hs
